tests/baselines/reference/parserReturnStatement2.errors.txt
==== tests/cases/compiler/parserReturnStatement2.ts (1 errors) ====
    {
       return;
       ~~~~~~
!!! parserReturnStatement2.ts(2,4): error TS1108: 'return' statement must be contained within a function body.
    }